[metadata]
name = esync
classifiers =
    Programming Language :: Python :: 3.5
    Development Status :: 2 - Pre-Alpha
description = Encrypt and sync files to cloud storage
license = MIT
author = Roman Zeyde
author_email = roman.zeyde@gmail.com
url = http://github.com/romanz/esync

[files]
packages =
    esync

[extras]
testing =
    coverage
    coveralls
    pytest
    pytest-cov
    pylint>=1.7
